# AdvancedSignalProcessing

./: .gitignore  README.md  pyproject.toml  vscode_shortcuts.txt
Fra Bjarke/: Wavelets.ipynb  Week_02.ipynb  Week_03.ipynb  Week_04.ipynb  Week_05.ipynb  Week_08.ipynb  Week_09.ipynb  Week_10_1.ipynb  Week_10_2.ipynb  Week_10_3.ipynb
Thomas/: FunctionLibrary.ipynb  Problems.ipynb
Thomas/Assignments/Assignment_1/: Assignment1.ipynb
Thomas/Assignments/Assignment_2/: Exercise2.ipynb  FunctionLibrary.ipynb  Thomas_Christiansen_Exam2.ipynb  Week_10_1.ipynb  asp_func.py
Thomas/Assignments/Assignment_3/: Thomas_Christiansen_Exam3.ipynb
