[tool.poetry]
name = "asp"
version = "0.1.0"
description = ""
authors = ["thomas <thomas.seeberg@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
scipy = "^1.14.1"
import-ipynb = "^0.1.4"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
